--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="Ronit.jpg" type="image/x-icon">
 
   <!--
     - custom css link
@@ -237,7 +237,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="assets/images/image.png
                 " alt="design icon" width="40">
               </div>
 
@@ -254,7 +254,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="assets/images/webdev.png" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -270,7 +270,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="assets/images/probsolve.png" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -286,7 +286,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="assets/images/ml.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
