Project and loc changes

--- a/index.html
+++ b/index.html
@@ -619,6 +619,26 @@ devices.<br>
 
             </li>
 
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">To-do List</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                • Developed a responsive To-Do List web application using React and Vite, implementing dynamic task
+                  creation, editing, and deletion with real-time UI updates.<br>
+                • Utilized UUID for unique task identification and managed application state effectively to ensure smooth
+                  user interactions.<br>
+                • Tools used: React, HTML, CSS, Javascript<br>
+              </p>
+
+            </li>
+
+
+
+
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">FIR registering system</h4>
@@ -1151,7 +1171,7 @@ devices.<br>
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1753.9285209738314!2d77.31200398865704!3d28.453725543940706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce7613a4f84c9%3A0x38a3a53d36ade49f!2sI%20P%20Colony%2C%20Sector%2032%2C%20Faridabad%2C%20Haryana%20121003!5e0!3m2!1sen!2sin!4v1749898390215!5m2!1sen!2sin"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224612.23990681546!2d77.15391751815888!3d28.402166055428268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc15f5a424b1%3A0xe4f50576c850e0f2!2sFaridabad%2C%20Haryana!5e0!3m2!1sen!2sin!4v1754830404585!5m2!1sen!2sin"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
@@ -1205,3 +1225,4 @@ devices.<br>
 
 </html>
 
+<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224612.23990681546!2d77.15391751815888!3d28.402166055428268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc15f5a424b1%3A0xe4f50576c850e0f2!2sFaridabad%2C%20Haryana!5e0!3m2!1sen!2sin!4v1754830404585!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
